Changed code so that square brackets and tags are shown both while in quotes. REmoved the blue baground from the script name.

--- a/styles/sho-denizen-language.less
+++ b/styles/sho-denizen-language.less
@@ -15,7 +15,6 @@
 
   /* is used for the title of a script */
   .syntax--scriptname {
-      background-color: blue;
       color: white;
       font-weight: bold;
   }
@@ -34,8 +33,9 @@
     color: hsl(187, 47%, 55%);
   }
 
+  /* .syntax--brackets is used for square brackets */
   .syntax--brackets {
-    color: hsl( 29, 54%, 61%);
+    color: hsl(0, 71%, 61%);
   }
   .syntax--injections {
     color: hsl( 95, 38%, 62%);
