R.emoved commented code from .cson file, changed comment in .less file and changed color of events.

--- a/styles/sho-denizen-language.less
+++ b/styles/sho-denizen-language.less
@@ -25,7 +25,7 @@
 
   /* .events is used for all 'on EVENT:' type sstatements */
   .syntax--events {
-    color: hsl(225, 89%, 48%);
+    color: hsl(227, 89%, 66%);
   }
 
   /* .tags is used for the tag marks themselves, ie: < and > */
@@ -41,7 +41,7 @@
     color: hsl( 95, 38%, 62%);
   }
 
-  /* .math is used for all destructive commands */
+  /* .math is not used */
   .syntax--math {
     color: hsl(348, 78%, 58%);
   }
