Changed the highlighting of text in tags to be grey if used in a string

--- a/styles/sho-denizen-language.less
+++ b/styles/sho-denizen-language.less
@@ -91,4 +91,9 @@
   .syntax--parameter {
     color: hsl(94, 75%, 60%);
   }
+
+  /* .raw sets the color of code text inside a tag to grey */
+  .syntax--raw {
+    color: hsl(0, 0%, 70%);
+  }
 }
