new if, else if, else and logical operators

--- a/styles/sho-denizen-language.less
+++ b/styles/sho-denizen-language.less
@@ -23,7 +23,7 @@
     background-color: hsl(355, 65%, 65%);
   }
 
-  /* .events is used for all 'on EVENT:' type sstatements */
+  /* .events is used for all 'on EVENT:' type statements */
   .syntax--events {
     color: hsl(227, 89%, 66%);
   }
